# nextcloud-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
scripts/: lint.sh
src/nextcloud_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  rendering.py  utils.py
src/nextcloud_cli/commands/: calendar.py  check.py  contacts.py  files.py  notes.py  setup.py  tasks.py
tests/: test_cli.py
